--- a/source/_assets/css/vscode-editor.css
+++ b/source/_assets/css/vscode-editor.css
@@ -227,6 +227,34 @@
     word-break: normal;
     word-spacing: normal !important;
     display: block; /* Cambiato da inline-block a block */
+    text-indent: 0 !important;
+    -webkit-text-indent: 0 !important;
+    -moz-text-indent: 0 !important;
+    text-indent-start: 0 !important;
+    text-indent-end: 0 !important;
+    padding-left: 0 !important;
+    margin-left: 0 !important;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+    letter-spacing: normal;
+}
+
+/* Reset più aggressivo specifico per l'indentazione di prism */
+.vscode-editor-code-container pre code.language-bash,
+.vscode-editor-code-container pre code.language-bash *,
+.vscode-editor-code-container pre code.language-javascript,
+.vscode-editor-code-container pre code.language-javascript *,
+.vscode-editor-code-container pre code.language-php,
+.vscode-editor-code-container pre code.language-php *,
+.vscode-editor-code-container pre code.language-html,
+.vscode-editor-code-container pre code.language-html *,
+.vscode-editor-code-container pre code.language-css,
+.vscode-editor-code-container pre code.language-css * {
+    text-indent: 0 !important;
+    -webkit-text-indent: 0 !important;
+    -moz-text-indent: 0 !important;
+    padding-left: 0 !important;
+    margin-left: 0 !important;
 }
 
 /* Forza l'applicazione degli stili ai token Prism.js */
@@ -238,6 +266,16 @@
     background: transparent !important;
     white-space: pre !important;
     text-indent: 0 !important;
+}
+
+/* Fix specifico per l'indentazione della prima riga */
+.vscode-editor .token,
+.vscode-editor span[class*="token"],
+.vscode-editor-code-container .token,
+.vscode-editor-code-container span[class*="token"] {
+    text-indent: 0 !important;
+    padding-left: 0 !important;
+    margin-left: 0 !important;
 }
 
 /* Assicura che le linee di codice siano formattate correttamente */
@@ -284,6 +322,21 @@
 
 .vscode-editor-code-container::-webkit-scrollbar-thumb:hover {
     background: var(--color-trans-pink);
+}
+
+/* Fix specifico per il problema di allineamento Prism */
+.vscode-editor .token:first-child,
+.vscode-editor code[class*="language-"] .token:first-child,
+.vscode-editor pre[class*="language-"] .token:first-child {
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+    text-indent: 0 !important;
+    position: relative !important;
+    left: 0 !important;
+    display: inline !important;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+    letter-spacing: normal;
 }
 
 /* Stili per evidenziazione della sintassi - Tema Retro CRT */
@@ -512,3 +565,46 @@
         padding: 2px 6px;
     }
 }
+
+
+/* Add retro computer terminal effect */
+pre[class*="language-"] {
+    position: relative;
+}
+
+pre[class*="language-"]::before {
+    content: "TERMINAL v1.0 - READY";
+    position: absolute;
+    top: -25px;
+    left: 0;
+    right: 0;
+    background: var(--color-retro-dark);
+    color: var(--color-retro-green);
+    padding: 5px 10px;
+    font-size: 10px;
+    border: 1px solid var(--color-trans-light-blue);
+    border-bottom: none;
+    text-shadow: 0 0 3px currentColor;
+}
+
+@keyframes blink {
+    0%,
+    50% {
+        opacity: 1;
+    }
+    51%,
+    100% {
+        opacity: 0;
+    }
+}
+
+/* Blinking cursor effect */
+/*pre[class*="language-"]::after {*/
+/*    content: "█";*/
+/*    color: var(--color-retro-green);*/
+/*    animation: blink 1s infinite !important;*/
+/*    position: absolute;*/
+/*    bottom: -4px;*/
+/*    right: 10px;*/
+/*    text-shadow: 0 0 5px currentColor;*/
+/*}*/
